--- a/Presentaciones/Dia3_ImportarDatos.Rmd
+++ b/Presentaciones/Dia3_ImportarDatos.Rmd
@@ -1028,6 +1028,14 @@ Su diagrama debe incluir:
 
 ---
 
+## Fechas importantes
+
+- Entrega de Reporte final (**28 de marzo 2025**) . [Rubrica](https://docs.google.com/document/d/10eC8KF4MDOT893h5wD0ukbLe9YUEypsa0rdsoixytqs/edit?tab=t.0)
+
+- Clase de retroalimentación (**29 de abril 2025**)
+
+---
+
 class: center, middle
 
 `r fontawesome::fa("code", height = "3em")`
